# jss_derive

./: Cargo.toml  README.md  test.rs
src/: common.rs  custom.rs  lib.rs  parser.rs  prepare.rs  setters.rs
